# GeoVerdict.AI

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: a2a.py  orchestrator.py
backend/app/api/v1/: routes.py
backend/app/geo/: osm_client.py
backend/app/llm/: router.py
backend/app/llm/providers/: base.py
backend/app/metrics/: prometheus.py
backend/app/models/: database.py  schemas.py
backend/app/observability/: __init__.py  tracing.py
backend/app/services/: repository.py
backend/app/static/: app.html  ops.html
docs/: governance.md  product-proposal.md  system-design.md
docs/diagrams/: architecture.md  c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/specs/: agent-orchestrator.md  memory-context.md  modules.md  observability-evals.md  retriever.md  serving-config.md  tools-apis.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analysis/[id]/: page.tsx
frontend/components/: analysis-detail.tsx  main-dashboard.tsx
frontend/lib/: api.ts
llmops-dashboard/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
llmops-dashboard/src/: App.tsx  styles.css
monitoring/grafana/dashboards/: geoverdict-runtime.json
monitoring/prometheus/: prometheus.yml
nginx/conf.d/: app.conf  llmops.conf
scripts/: github_preflight.sh  release_clean.sh  start_wsl_services.sh  stop_wsl_services.sh
(+1 files in other folders)
